# receipts

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
examples/: demo_trace.json  run_example.py
fixtures/labeled/: 01_all_verified.json  02_phantom_ban.json  03_silent_fail_config.json  04_mixed.json  05_future_and_negation.json  06_failure_marker.json  07_multi_action_sentence.json  08_phantom_among_real.json  09_fetch_verified.json  10_wrong_object_phantom.json
receipts/: __init__.py  claims.py  cli.py  reconcile.py  report.py  selfeval.py  trace.py
tests/: test_claims.py  test_cli.py  test_reconcile.py  test_selfeval.py  test_trace.py
