[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "receipts-check"
version = "0.1.0"
description = "Reconcile what an AI agent CLAIMED it did against its actual tool-call trace: catch phantom actions and silent failures. Offline, no model required."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "insomniac-asif" }]
requires-python = ">=3.9"
keywords = ["llm", "agents", "tool-calling", "evaluation", "observability", "hallucination"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/insomniac-asif/receipts"
Source = "https://github.com/insomniac-asif/receipts"

[project.scripts]
receipts = "receipts.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["receipts"]

[tool.hatch.build.targets.sdist]
include = ["receipts", "fixtures", "examples", "tests", "README.md", "LICENSE"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
